添加pdf边距定义功能，配置文件添加说明

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,9 @@
 [App]
-save_path = output/
+# 导出文件的存储目录，可以写绝对路径或相对路径
+save_path = output\
 ;save_path = D:\MyFiles
+
+# pdf边距定义，[top, left, bottom, right]， 一般不需要更改
+area = 35.0, 35.0, 735.0, 560.0
+area1 = 230.0, 35.0, 735.0, 560.0
 
