获取路径优化，增加打包脚本

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [App]
 # 导出文件的存储目录，可以写绝对路径或相对路径
-save_path = output\
+save_path = output
 ;save_path = D:\MyFiles
 
 # pdf边距定义，[top, left, bottom, right]， 一般不需要更改
